# Jen

./: .gitignore  README.md  pyproject.toml
scripts/: jen_voice.py  kenney_tile_condition_classifier.py  voice_gjallarhorn_say.py
scripts/voice_assistant/: __init__.py  agents.py  asr.py  bot.py  coding_monitor.py  coding_workspace.py  config.py  daily_slot_parser.py  dashboard.py  domain_probe.py  event_metadata.py  fallbacks.py  filler.py  front_note.py  http_client.py  http_payloads.py  input_hotkeys.py  json_utils.py  local_actions.py  location_helper.py  plan_recovery.py  planning.py  platformer_rule_engine.py  pro_guards.py  pro_lane.py  prompts.py  pyobjc_ui.py  recorder.py  speech.py  speech_text.py  store.py  tool_policy.py  tool_registry.py  tool_runtime.py  tool_speech.py  tool_state.py  ui.py  url_utils.py  voice_text.py  weather_location.py
semantic_slot_parser/: README.md  __init__.py  bench.py  generate_data.py  infer_mlx.py  labels.py  model_mlx.py  requirements.txt  resolver.py  train.py  train_mlx.py
semantic_slot_parser/artifacts/: label_map.json  model_mlx.npz  vocab.json
tests/: test_voice_assistant_core.py
